# chip-8

./: .gitignore  CMakeLists.txt  Makefile  README.md  common_defs.cmake
.github/workflows/: ci.yml
mwindow/: .gitignore  README.md  impl.c  win32.c  x11.c
mwindow/include/: minimal_window.h
src/: front.c  front.h  gs.c  log.h  main.c  system.c  system.h  win.c  win.h
